deployment/kubernetes-pod-db-init.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pdc-db-init
  labels:
    run: pdc-db-init
  namespace: pdc
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: pdc-db-init
    spec:
      containers:
      - name: pdc-db-init
        image: cwiegleb/pdc-db
