deployment/kubernetes-srv-pod-article.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pdc-article-service
  labels:
    run: pdc-article-service
  namespace: pdc
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: pdc-article-service
    spec:
      containers:
      - name: pdc-article-service
        image: cwiegleb/pdc-article-service
        ports:
          - containerPort: 9001
            protocol: TCP
---

kind: Service
apiVersion: v1
metadata:
  name: pdc-article-service
  namespace: pdc
spec:
  selector:
    run: pdc-article-service
  ports:
    - name: port1
      protocol: TCP
      port: 9001
      targetPort: 9001
  type: NodePort
