deployment/kubernetes-srv-pod-csv-upload.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pdc-csv-upload-service
  labels:
    run: pdc-csv-upload-service
  namespace: pdc
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: pdc-csv-upload-service
    spec:
      containers:
      - name: pdc-csv-upload-service
        image: cwiegleb/pdc-csv-upload-service:no-article
        ports:
          - containerPort: 9005
            protocol: TCP
---

kind: Service
apiVersion: v1
metadata:
  name: pdc-csv-upload-service
  namespace: pdc
spec:
  selector:
    run: pdc-csv-upload-service
  ports:
    - name: port1
      protocol: TCP
      port: 9005
      targetPort: 9005
  type: NodePort
