deployment/kubernetes-srv-pod-db.yml

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: pdc-db
  labels:
    run: pdc-db
  namespace: pdc
spec:
  replicas: 1
  template:
    metadata:
      labels:
        run: pdc-db
    spec:
      containers:
      - name: pdc-db
        image: postgres
        ports:
        - containerPort: 5432
          protocol: TCP
        volumeMounts:
          - 
            name: pdc-db-data
            mountPath: /pdc-db-data
      volumes:
      - name: pdc-db-data
        persistentVolumeClaim:
          claimName: pdc-db-data
---

kind: Service
apiVersion: v1
metadata:
  name: pdc-db
  namespace: pdc
spec:
  selector:
    run: pdc-db
  ports:
    - name: port1
      protocol: TCP
      port: 5432
      targetPort: 5432
  type: NodePort
