deployment/kubernetes-ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pdc-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
  namespace: pdc
spec:
  # tls:
  #   - hosts:
  #     - service.pdc.local
  #     - frontend.pdc.local
  #     secretName: tls-certificate
  rules:
  - host: service.pdc.local
    http:
      paths:
      - path: /articles
        backend:
          serviceName: pdc-article-service
          servicePort: 9001
      - path: /cashboxes
        backend:
          serviceName: pdc-cashbox-service
          servicePort: 9002
      - path: /dealers-upload
        backend:
          serviceName: pdc-csv-upload-service
          servicePort: 9005
      - path: /dealers
        backend:
          serviceName: pdc-dealer-service
          servicePort: 9003
      - path: /dealers-invoices
        backend:
          serviceName: pdc-dealer-service
          servicePort: 9003
      - path: /orders
        backend:
            serviceName: pdc-order-service
            servicePort: 9004
  - host: frontend.pdc.local
    http:
      paths:
      - path: /
        backend:
          serviceName: pdc-frontend
          servicePort: 80
